tests/cases/vectors/ok/vector-reserve-known-local.ari
fn main() -> i64 {
  let capacity = 3;
  var values: Vec[i64] = [];
  values.reserve(capacity);
  values.push(10);
  values.push(11);
  values.push(12);
  return values.capacity() + values.len() + values[2];
}
