tests/cases/vectors/errors/vector-method-known-empty-first.ari
fn main() -> i64 {
    let values: Vec[i64] = [];
    return values.first();
}
